--- a/templates/consonant/blocks/marquee/marquee.css
+++ b/templates/consonant/blocks/marquee/marquee.css
@@ -12,7 +12,7 @@ main .section-wrapper:first-of-type.marquee-container {
 
 main .section-wrapper:first-of-type.marquee-container > div > :first-child:not(.marquee) {
     margin-top: 128px;
-    margin-top: calc(var(--header-height) + 64px);
+    margin-top: calc(var(--header-height) + var(--section-spacing));
 }
 
 main .section-wrapper:first-of-type.marquee-container .marquee:first-child {
@@ -28,10 +28,6 @@ main .section-wrapper.marquee-container > div {
     padding: 0;
 }
 
-main .section-wrapper.marquee-container > div.marquee {
-    padding: 24px 0;
-}
-
 main .section-wrapper.marquee-container > div > :not(.marquee) {
     padding-left: 2rem;
     padding-right: 2rem;
@@ -42,7 +38,7 @@ main .section-wrapper.marquee-container > div > :not(.marquee) {
 
 main .marquee {
     padding: 24px 0;
-    margin: 48px 0;
+    margin: var(--section-spacing) 0;
     --marquee-height-sm: 400px;
     --marquee-height-md: 560px;
     --marquee-height-lg: 700px;
